--- a/content/thoughts/start.mdx
+++ b/content/thoughts/start.mdx
@@ -9,6 +9,6 @@ date: 2025-08-16 23:00
 
 直到前两天偶然看到 [wiwi 的博客](https://wiwi.blog/)。他在我眼里是个既懂技术又热爱自由软件的音乐老师（在我看来是这样）。他关掉了常用的社交媒体，比如 Facebook、Instagram 和 Twitter，把博客当作社交平台来用，写一些自己觉得有意思、有营养的内容。那些文字看得出来是认真写的，也带着自己的思考，读着让我很有共鸣。于是我也心动了，决定学学他。
 
-所以，从今天起，我也要开始“发朋友圈”了。想想其实挺不错的。毕竟上学、工作以后加了太多微信好友，想写点什么，总担心有人看了会多想，或者觉得我在无病呻吟。虽然“道不同不相为谋”，但很多时候还是得做点表面功夫。相比之下，这里要自在得多，也干净得多。希望以后能多写些自己看得过去的东西，交到更多朋友。
+所以，从今天起，我也要开始“发朋友圈”了。想想其实挺不错的。毕竟上学、工作以后加了太多微信好友，有时候想写点什么，总担心有人看了会多想，或者觉得我在无病呻吟。虽然“道不同不相为谋”，但很多时候还是得做点表面功夫。相比之下，这里要自在得多，也干净得多。希望以后能多写些自己看得过去的东西，交到更多朋友。
 
 就这样吧，当成是我的开博宣言。
